--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@anthropic-ai/claude-code": "^2.0.0",
     "@types/chrome": "^0.0.287",
+    "@types/node": "^25.0.10",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "cross-env": "^7.0.3",
