--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "npm run build:chrome && npm run build:firefox",
     "build:chrome": "cross-env TARGET_BROWSER=chrome VITE_BUILD_TARGET=main vite build && cross-env TARGET_BROWSER=chrome VITE_BUILD_TARGET=content vite build",
     "build:firefox": "cross-env TARGET_BROWSER=firefox VITE_BUILD_TARGET=main vite build && cross-env TARGET_BROWSER=firefox VITE_BUILD_TARGET=content vite build",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "sync:versions": "node scripts/sync-versions.mjs",
     "sync:versions:check": "node scripts/sync-versions.mjs --check",
     "typecheck": "tsc --noEmit",
@@ -26,7 +28,8 @@
     "eslint": "^9.0.0",
     "rimraf": "^6.0.0",
     "typescript": "^5.7.0",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
